src/global.css
* {
  margin: 0;
  padding: 0;
}

html {
  /* 
  Default browser font size - 16px
  Setting 62.5% so 1rem = 10px
  */
  font-size: 62.5%;
}

body {
  min-height: 100vh; /*set to full viewport height*/
  display: flex;
  flex-direction: column;
  background: rgb(151, 203, 219);
  color: rgb(51, 51, 51);
  font-family: "Nunito", sans-serif;
  font-size: 1.6rem; /*set base font to 16px*/
  font-weight: 600;
}

main {
  flex: 1;
  display: flex;
  align-items: center;
}

.weather-app {
  display: block;
  width: 95%;
  max-width: 600px;
  margin: 60px auto;
  text-align: center;
}

h1 {
  font-size: 5rem;
  font-weight: 900;
  line-height: 1;
  padding: 60px 0px 0px 0px;
}

.search-bar {
  padding: 30px 0px;
}

/*Global Form Styling*/
form {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  gap: 10px;
}
input {
  font-family: inherit;
  font-size: 2.6rem; /*26px*/
  font-weight: 600;
  border: 0px;
  border-radius: 9999px;
  padding: 5px 15px;
  margin: 3px;
}

input#search-field {
  outline: none;
}

input[type="submit"] {
  background-color: rgb(255, 219, 147);
  font-weight: 800;
  transition: transform 0.2s ease;
}

input[type="submit"]:hover {
  cursor: pointer;
  transform: scale(1.1);
}

::placeholder {
  color: rgb(136, 134, 134);
}

/*Results Section*/
.weather-results {
  display: flex;
  justify-content: space-between;
  flex-wrap: wrap;
}

.current-temperature {
  display: flex;
  align-items: flex-start;
  justify-content: flex-end;
}

/* Mobile Responsive Stacking */
@media (max-width: 768px) {
  .weather-results,
  .location {
    justify-content: center;
    text-align: center;
  }

  .weather-results-text,
  .current-temperature,
  .location {
    flex-basis: 100%; /* Takes full width */
  }

  .current-temperature {
    justify-content: center;
    margin-top: 15px;
  }
}

.search-city {
  font-size: 3.6rem; /*34px*/
  font-weight: 900;
  margin: 0;
}

.city-details {
  font-size: 1.2rem; /*12px*/
  line-height: 1.1;
}

.city-details strong {
  font-weight: 800;
}

.current-temperature {
  display: flex;
  align-items: flex-start;
  font-weight: 800;
}

.temperature-icon {
  position: relative;
  width: 5em;
  top: 1rem;
}
.temperature-value {
  font-size: 7rem; /*40px*/
}

.temperature-unit {
  position: relative;
  font-size: 2rem; /*20px*/
  font-weight: 800;
  top: 1.6rem;
}

/*Forecast*/
.forecast-container {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  padding: 20px 0px;
}

.forecast-result {
  display: flex;
  align-items: center;
  flex-wrap: wrap;
  gap: 5rem;
  margin: 15px auto;
  padding: 3px 25px;
  background-color: rgba(255, 255, 255, 0.481);
  border-radius: 20px;
  font-weight: 700;
}

.forecast-date {
  width: 100px;
  text-align: left;
}
.forecast-icon {
  display: flex;
  text-align: center;
  align-items: center;
}

.forecast-icon img {
  width: 30px;
  height: auto;
}

.temperature-group {
  display: flex;
  gap: 5px;
}

.forecast-result strong {
  font-weight: 800;
  color: rgb(6, 114, 151);
}

.low-temp {
  color: rgba(7, 136, 179, 0.618);
}

/*Footer bar*/
footer {
  margin: 0 auto;
  max-width: 100%;
  padding: 20px 0px;
  text-align: center;
  font-size: 1.2rem; /*12px*/
  font-weight: 600;
}

footer a {
  color: rgb(7, 136, 179);
  font-weight: 800;
  text-decoration: none;
}

footer a:hover {
  font-style: italic;
  color: rgb(255, 219, 147);
  font-weight: 500;
}

/* placeholder text animation*/

